<resources>
    <string name="app_name">My Application</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="play"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="principle_of_flight">In physics, we define force as an interaction that can change the motion of an object. In order to make an aircraft flying, there are different forces acting on the plane like the picture shown above. They are the thrust of the engine, drag force from the resistance, the gravity force of the aircraft itself and the lifting force of the air.</string>
    <string name="lift">To make a plane rise into the air, the force needs to exceed the weight force. That force is called lift. In most cases, lift is created by the flow of air over an airfoil (Any surface designed to help lift an aircraft with the use of air current). Apparently, you can say that the lift keeps the aircraft up.\nMisconceptions: The key point for airplane to fly is not the engine. In another word, even all engines stop, an airplane can still glide down.</string>
    <string name="weight">Weight is the gravity force, a force that pulls everything towards the earth’s surface, of the airplane itself. It is an unavoidable force acting on the plane according to Newton’s law.</string>
    <string name="drag">In Physics, everything that goes through the air will experience a resistance force, in this case, the resistance is called drag.</string>
    <string name="thrust">Thrust is the force to make the object move. In this case, thrust from the engine is the power source of the aircraft.</string>
    <string name="how_does_aircraft_work">When a plane is flying in the constant speed, the aircraft is in equivalent, meaning it is balanced. Then the lift force is equal to the weight and the thrust is equal to the drag. If the aircraft is not balanced, meaning the aircraft will speed up, slow down or change direction.</string>
    <string name="turbulence">Turbulence is occurred when the airplane fly through one varied air current to another. This is the most common thing that scares us about flying. There are a few situations might cause turbulence. \nFirst is the convective currents, heat generated from the radioactive decay of elements deep in the interior of the Earth creates magma (molten rock) in the asthenosphere and cause air rise.\nSecond one is obstructions to wind flow and it can cause all kinds of eddies and current.\nThe last one is windshear or wind gradient, this is the difference in wind speed or direction over a relatively short distance in the atmosphere.\nIt is hyperbolic to say that turbulence is super dangerous but we can’t say that turbulence is not dangerous at all. There are four main danger of turbulence.\nFirst one is structural failure. It is true that small and general planes might get destroyed in the thunderstorms. But for commercial airplanes, they have radar on-board to spot and avoid thunderstorm. So don’t worry about this when you are flying in commercial airplanes.\nSecond one is passenger injury. ‘Fasten seat belt’ sign is necessary especially when the airplane is flying into downward-moving air. Most cases when passenger get injured are people who didn’t fasten their seat belts all the time.\nThe third danger is altitude loss near ground. Altitude changed rapidly can also be one of the dangers turbulence can get. This danger can usually caused by wake turbulence, a disturbance in the atmosphere that forms behind an aircraft as it passes through the air, and thunderstorms.\nThe last one is wind changes near the ground.</string>
    <string name="airline_accident_rate1">ICAO, the International Civil Aviation Organisation is a specialised agency of the United Nations. They publish annual ICAO Safety Reports every year and the report provided updates on safety indicators, including accidents and related risk factors.\nIn 2017 annual ICAO Safety report, some statement has included in the accident statistics report.</string>
    <string name="airline_accident_rate2">From the chart 1 above, it indicated that the accident rate in 2016 has decreased and it is the lowest record ever.\nThere are many different factors can cause the flight accidents. According to ICAO, in the 2017-2019 Global Aviation Safety Plan ICAO has included three high-risk accident occurrence categories (HRC) as the Global Safety Priorities. They are runway safety related events (RS), loss of control inflight (LOC-I) and controlled flight into terrain (CFIT). Also ICAO uses these three high-risk accident categories as a baseline in its safety analysis.</string>
    <string name="sound">Most people who have flying phobia are scared of the noises or some strange sound during the flight, especially when you don’t know what causes them. So there are a few sounds might be able to help you with recognizing the sound.\n• Right after taking-off, the landing gear will be retracted and cause a thumping sound\n• You might also hear a whirring sound as a motor retracts the flaps and spoilers. (These are made to stick out of the back of the wings in order to add extra lift on take-off and to help slow the airplane on descent.)\n• You might hear the engines throttle back when levelling off for cruise.\n• You might hear whirring sounds as flaps and spoilers are extended for descent and landing.\n• Before landing, you will hear thumping as the landing gear comes down again same as the taking-off one.</string>
    <string name="compIntro">Welcome to xxx_website_address_xxx.com. The xxx_website_address_xxx.com website (the "Site") is comprised of various web pages operated by SHIPS, Inc. xxx_website_address_xxx.com is offered to you conditioned on your acceptance without modification of the terms, conditions, and notices contained herein (the "Terms"). Your use of xxx_website_address_xxx.com constitutes your agreement to all such Terms. Please read these terms carefully, and keep a copy of them for your reference.\nxxx_website_address_xxx.com is a E-commerce Site \nSHIPS provides assistance to individuals who have difficulty flying.</string>
    <string name="privacy">Your use of xxx_website_address_xxx.com is subject to SHIPS, Inc.\'s Privacy Policy. Please review our Privacy Policy, which also governs the Site and informs users of our data collection practices. \nElectronic Communications \nVisiting xxx_website_address_xxx.com or sending emails to SHIPS, Inc. constitutes electronic communications. You consent to receive electronic communications and you agree that all agreements, notices, disclosures and other communications that we provide to you electronically, via email and on the Site, satisfy any legal requirement that such communications be in writing.</string>
    <string name="yourAcc">If you use this site, you are responsible for maintaining the confidentiality of your account and password and for restricting access to your computer, and you agree to accept responsibility for all activities that occur under your account or password. \nYou may not assign or otherwise transfer your account to any other person or entity. You acknowledge that SHIPS, Inc. is not responsible for third party access to your account that results from theft or misappropriation of your account. \nSHIPS, Inc. and its associates reserve the right to refuse or cancel service, terminate accounts, or remove or edit content in our sole discretion. SHIPS, Inc. does not knowingly collect, either online or offline, personal information from persons under the age of thirteen. If you are under 18, you may use xxx_website_address_xxx.com only with permission of a parent or guardian. </string>
    <string name="cancel">When you fly after completing the Guaranteed Course, if unsatisfied with the improvement, you receive a full refund. The Guaranteed Course consists of 11 DVDs and 2 hours of individual counselling. Shorter courses (Rapid Relief or Complete Relief) or parts of courses are not guaranteed and are not returnable or refundable.</string>
    <string name="thirdParty">xxx_website_address_xxx.com may contain links to other websites ("Linked Sites"). The Linked Sites are not under the control of SHIPS, Inc. and SHIPS, Inc. is not responsible for the contents of any Linked Site, including without limitation any link contained in a Linked Site, or any changes or updates to a Linked Site. SHIPS, Inc. is providing these links to you only as a convenience, and the inclusion of any link does not imply endorsement by SHIPS, Inc. of the site or any association with its operators. \nCertain services made available via xxx_website_address_xxx.com are delivered by third party sites and organizations. By using any product, service or functionality originating from the xxx_website_address_xxx.com domain, you hereby acknowledge and consent that SHIPS, Inc. may share such information and data with any third party with whom SHIPS, Inc. has a contractual relationship to provide the requested product, service or functionality on behalf of xxx_website_address_xxx.com users and customers. </string>
    <string name="emdr_string">EMDR</string>
    <string name="emdr_guide_title">What is EMDR?</string>
    <string name="emdr_description">Eye Movement Desensitisation and Reprocessing Therapy (EMDR) has been shown to move you to a neutral state, allowing you to neutralise negative feelings, reinforce positive feelings or simply relax!\nBy applying this technique to visualised flight scenarios, you may be able to reduce your discomfort associated with these situations</string>
    <string name="emdr_negative_title">Negative neutralisation</string>
    <string name="emdr_negative_description">While you complete the eye movement exercise, remember an uncomfortable memory you have of flying or else visualise yourself in this unpleasant flying scenario.</string>
    <string name="emdr_positive_title">Positive reinforcement</string>
    <string name="emdr_positive_description">During the eye movement exercise, focus on a positive outcome of flying. You make your way through the airport, board a plane and sit safely in your seat. The plane lands safely at your destination</string>
    <string name="back_button_text">Back</string>
    <string name="settings_button_text">Settings</string>
</resources>