<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_margin="10dp"
    tools:context="com.example.ships.myapplication.EMDR.EMDRActivitySettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EMDR_Title"
        android:text="@string/emdr_string"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EMDR_Guide_Title"
        android:text="@string/emdr_guide_title"
        android:layout_below="@id/EMDR_Title"
        android:textStyle="italic"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EMDR_Guide_Title"
        android:id="@+id/emdr_description"
        android:text="@string/emdr_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emdr_description"
        android:id="@+id/emdr_negative_neutralisation_heading"
        android:text="@string/emdr_negative_title"
        android:textSize="18dp"
        android:layout_marginTop="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emdr_negative_neutralisation_heading"
        android:id="@+id/emdr_negative_neutralisation_description"
        android:text="@string/emdr_negative_description">
    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emdr_negative_neutralisation_description"
        android:id="@+id/emdr_positive_reinforcement_heading"
        android:textSize="18dp"
        android:text="@string/emdr_positive_title"
        android:layout_marginTop="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emdr_positive_reinforcement_heading"
        android:id="@+id/emdr_positive_reinforcement_description"
        android:text="@string/emdr_positive_description">
    </TextView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/emdr_settings_buttons_layout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:id="@+id/emdr_guide_back_button"
            android:text="@string/back_button_text"
            android:background="@drawable/roundedbutton"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/emdrstartbutton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:onClick="sendMessage"
            android:text="@string/settings_button_text"
            android:background="@drawable/roundedbutton"
            android:textColor="#FFFFFF"/>


    </LinearLayout>


</RelativeLayout>